<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  App strings --> 
    <string name="app_name">UltiMeter</string>
    <string name="title_series">Series</string>
    <string name="title_parallel">Parallel</string>
    <string name="title_advanced">Advanced</string>
    
     <!-- Menu strings -->
    <string name="action_settings">Settings</string>
    <string name="action_display">Device Info</string>
    <string name="action_list">List Devices</string>
    <string name="action_connect">Connect</string>
    <string name="action_setDevice">Set Device</string>
    
    <!-- USB Enumeration & Connection Fragment Strings -->
    <string name="usbEnum">Enumerate</string>
    <string name="usbConn">LCR On</string>
    <string name="usbInfo">USB Device Info</string>
    <string name="info">Info</string>
    
    <string name="nothing">Nothing To See Here</string>
    
    <!-- Data display strings -->
    <string name="res">R</string>
    <string name="react">X</string>
    <string name="Q">Q</string>
    <string name="D">D</string>
    <string name="mag">Mag</string>
    <string name="phase">Phase</string>
    <string name="rcpar">Example of a parallel RC circuit</string>
    <string name="connectDesc">State of Device Connection</string>
    

</resources>
