<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_connect"/>
    
    <item
        android:id="@+id/action_setDevice"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_setDevice"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_listDevices"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_list"/>

</menu>
